--- a/PAGINA_2/patronesoscuros.html
+++ b/PAGINA_2/patronesoscuros.html
@@ -23,74 +23,90 @@
     <!-- nav barra -->
     <div id="nav"></div>
 
+    <div class="rectangulopestaña"></div>
+
     <!-- cuadro principal -->
     <div class="container justify-content-between" id="container_principal"> 
         <!-- descripcion -->
-        <div class="container">
+        <div class="container" id="containertitulo">
             <h2>PATRONES OSCUROS</h2>
             <div class="container text-center" id="container_texto">
-                <p>Dark Patterns o patrones oscuros, son técnicas de diseño de interfaz que de manera intencional, manipulan o engañan a los 
-                    usuarios con el fin de poder buscar un beneficio propio,
-                   donde, para llevar a cabo esto, utilizan diseños que pueden ser un tanto incómodos para el usuario o que influencian en su 
-                   comportamiento dentro de la web, y que a fin de cuentas, 
-                   los usuarios acceden a interactuar con ellos sin darse cuenta. Estas técnicas pueden ser vistas en aplicaciones, páginas web, 
-                   entre otros productos digitales.</p>
+                <p>Pese a que los patrones tengan el objetivo de potenciar la calidad de experiencia interfaz-usuario existe un área de patrones oscuros o Dark Patterns,
+                   estas a diferencia de los patrones estándares corresponden a técnicas del diseño de interfaces que priorizan los beneficios de los 
+                   propietarios de la interfaz por sobre a las del usuario, realizando diseños que perjudican y dificultan la experiencia del usuario
+                   con el servicio mediante acciones forzadas, incómodas o que influyen en el comportamiento de la plataforma donde los usuarios acceden
+                   a interactuar con ellos de manera forzada o sin consentimiento explícito.</p> 
+
+                   <p>Estos patrones están diseñados para lograr objetivos particulares como lo sería aumentar las suscripciones a un servicio de manera inmediata y que
+                   pudiese generar mayores ingresos a los dueños o compañías de estas plataformas, no obstante, estos se generarían a costa de la satisfacción y
+                   confianza del usuario hacia el servicio e incluso del propietario a cargo.</p>
+                    
+                   <p>El rol del diseñador en la implementación de estos patrones varía tanto de la ética profesional que tenga el diseñador como de las políticas
+                   de la empresa o propietario al cual trabaje el diseñador. El diseñador cumple un papel fundamental en la ejecución de la interfaz y por
+                   consiguiente, es responsable de cómo se presentan estos servicios y de cómo interactúa con los usuarios. Por lo tanto, es importante que los
+                   diseñadores tengan conciencia de estas técnicas interactivas y  de sus consecuencias para el usuario como también del pensamiento crítico
+                   para considerar si es factible la implementación de estos elementos en sus interfaces.
+                </p>
             </div>
         </div>
         <!-- CATEGORÍAS -->
         <div class="container" id="categorias">
             <h2>CATEGORÍAS</h2>
             <!-- FILAS -->
-            <div class="row" id="manipulacion">   
-                <div class="col-6" id="manipulacion_titulo">
+            <div class="row" id="container_doble">   
+                <div class="col-5">
                     <h3>MANIPULACIÓN</h3>
                 </div>
-                <div class="col-6" id="manipulacion_des">
+                <div class="col-7" id="container_doble">
                     <p>Se dirige al usuario para que realice acciones no deseadas, pero que son beneficiosas para la interfaz o servicio.</p>
                 </div>
             </div>
             <div class="row" id="container_doble">   
-                <div class="col-6">
+                <div class="col-5">
                     <h3>MANIPULACIÓN EMOCIONAL</h3>
                 </div>
-                <div class="col-6">
+                <div class="col-7">
                     <p>El usuario es manipulado a través de frases a realizar cosas que no tenía pensado desde un comienzo.</p>
                 </div>
             </div>
             <div class="row" id="container_doble">   
-                <div class="col-6">
+                <div class="col-5">
                     <h3>OSCURECIMIENTO DE PRIVACIDAD</h3>
                 </div>
-                <div class="col-6">
+                <div class="col-7">
                     <p>El usuario no tiene claro de qué forma será usada su información privada.</p>
                 </div>
             </div>
             <div class="row" id="container_doble">   
-                <div class="col-6">
+                <div class="col-5">
                     <h3>SUSCRIPCIONES INVOLUNTARIAS</h3>
                 </div>
-                <div class="col-6">
+                <div class="col-7">
                     <p>El usuario es manipulado a través de frases a realizar cosas que no tenía pensado desde un comienzo.</p>
                 </div>
             </div>  
             <div class="row" id="container_doble">   
-                <div class="col-6">
+                <div class="col-5">
                     <h3>URGENCIAS FALSAS</h3>
                 </div>
-                <div class="col-6">
+                <div class="col-7">
                     <p>El usuario es manipulado a través de frases a realizar cosas que no tenía pensado desde un comienzo.</p>                    
                 </div>
             </div>  
             <div class="row" id="container_doble">   
-                <div class="col-6">
+                <div class="col-5">
                     <h3>ANUNCIOS DISFRAZADOS</h3>
                 </div>
-                <div class="col-6">
+                <div class="col-7">
                     <p>El usuario es manipulado a través de frases a realizar cosas que no tenía pensado desde un comienzo.</p>
                 </div>
             </div>  
         </div>    
     </div>
+
+    <div class="rectangulocierre"></div>
+
+
     <!-- footer  -->
     <div id="footer"></div>
         <!-- bootstrap -->
