--- a/PAGINA_2/patrones.html
+++ b/PAGINA_2/patrones.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="/PAGINA_2/css/patrones.css">
     <!-- nav.css -->
     <link rel="stylesheet" href="/PAGINA_2/nav/nav.css">
+    <!-- cookie -->
+    <link rel="stylesheet" href="/PAGINA_2/cookie/cookie.css">
     <!-- footer.css -->
     <link rel="stylesheet" href="/PAGINA_2/footer/footer.css">
 </head>
