--- a/PAGINA_2/index.html
+++ b/PAGINA_2/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="styles.css">
     <!-- nav.css -->
     <link rel="stylesheet" href="/PAGINA_2/nav/nav.css">
+    <!-- cookie -->
+    <link rel="stylesheet" href="/PAGINA_2/cookie/cookie.css">
     <!-- footer.css -->
     <link rel="stylesheet" href="/PAGINA_2/footer/footer.css">
 </head>
@@ -24,6 +26,9 @@
     <div class="container" id="imagendefondo">
         <!-- nav barra -->
         <div id="nav"></div>
+
+        <!-- Barra de cookies -->
+        <div id="cookie"></div>
         <!-- circulos -->
         <div class="container" id="container_principal">
             <div class="row" id="row_circulos_1">
@@ -150,10 +155,10 @@
     <!-- franja 2 -->
     <div class="container-fluid" id="franja_2">
         <div class="container" id="franja_2_contenido">
-            <h2>PATRONES</h2>
+            <h2><a href="/PAGINA_2/patronesoscuros.html" class="link-sin-estilo">PATRONES</a></h2>
         </div>
         <div class="container" id="franja_2_contenido">
-            <h2>PATRONES OSCUROS</h2>
+            <h2><a href="/PAGINA_2/patronesoscuros.html" class="link-sin-estilo">PATRONES OSCUROS</a></h2>
         </div>
     </div>
     <!-- Nuestro objetivo -->
@@ -192,9 +197,11 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <!-- js -->
-    <script src="/PAGINA_2/app.js" async defer></script>
+    <script src="scripts.js" async defer></script>
     <!-- nav.js -->
     <script src="/PAGINA_2/nav/nav.js"></script>
+    <!-- cookie -->
+    <script src="/PAGINA_2/cookie/cookie.js"></script>
     <!-- footer.js -->
     <script src="/PAGINA_2/footer/footer.js"></script>
 </body>
