--- a/PAGINA_2/nav/nav.html
+++ b/PAGINA_2/nav/nav.html
@@ -3,23 +3,23 @@
         <a class="navbar-brand" href="/PAGINA_2/index.html" id="nav_home">NODEUX</a>
         <div class="d-flex"> 
             <!-- USUARIO -->
-            <li class="nav-item dropdown">
+            <div class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" id="nav_ejemplos">USUARIO</a>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">Investigación de usuario</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="/PAGINA_2/patronesoscuros.html">Patrones Oscuros / experiencias</a></li>
                 </ul>
-            </li>
+            </div>
             <!-- Acerca de -->
-            <li class="nav-item dropdown">
+            <div class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" id="nav_acerca">ACERCA DE</a>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">¿Quiénes somos? </a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="#">¿Qué buscamos?</a></li>
                 </ul>
-            </li>
+            </div>
         </div>
 
     </div>
