--- a/PAGINA_2/patronesoscuros.html
+++ b/PAGINA_2/patronesoscuros.html
@@ -16,6 +16,10 @@
     <link rel="stylesheet" href="/PAGINA_2/css/patronesoscuros.css">
     <!-- nav.css -->
     <link rel="stylesheet" href="/PAGINA_2/nav/nav.css">
+    <!-- boton mas.css -->
+    <link rel="stylesheet" href="/PAGINA_2/more/more.css">
+    <!-- loader distraccion -->
+    <link rel="stylesheet" href="/PAGINA_2/loader/loader.css">
     <!-- footer.css -->
     <link rel="stylesheet" href="/PAGINA_2/footer/footer.css">
 </head>
@@ -23,9 +27,10 @@
     <!-- nav barra -->
     <div id="nav"></div>
 
-    <div class="rectangulopestaña"></div>
+    
 
     <!-- cuadro principal -->
+    <div class="rectangulopestaña"></div>
     <div class="container justify-content-between" id="container_principal"> 
         <!-- descripcion -->
         <div class="container" id="containertitulo">
@@ -53,14 +58,35 @@
         <div class="container" id="categorias">
             <h2>CATEGORÍAS</h2>
             <!-- FILAS -->
-            <div class="row" id="container_doble">   
+            <div class="row container_doble">
                 <div class="col-5">
-                    <h3>MANIPULACIÓN</h3>
+                    <h3 class="titulo-manipulacion">MANIPULACIÓN <span class="triangulo"></span></h3>
                 </div>
-                <div class="col-7" id="container_doble">
-                    <p>Se dirige al usuario para que realice acciones no deseadas, pero que son beneficiosas para la interfaz o servicio.</p>
+                <div class="col-7">
+                    <p>Se dirige al usuario para que realice acciones no deseadas, 
+                        pero que son beneficiosas para la interfaz o servicio.</p>
+                </div>
+                <div class="contenido oculto" id="contenido-manipulacion">
+                    <!-- Contenido oculto aquí -->
+                    <h2>Manipulación</h2>
+                    <p>Se presenta al usuario una opción para realizar una acción,
+                         pero el diseño de la interfaz hace que sea fácil seleccionar una opción no deseada.
+                          Por ejemplo, los botones de Aceptar y Cancelar pueden estar diseñados de manera
+                           que el botón Aceptar sea más llamativo o esté ubicado en una posición que
+                            favorezca su selección accidental.
+                    </p>
+                    <h3>Casos de estudio</h3>
+                    <p>Loren ipsun dolor sit anet, consectetur adipisci elit, 
+                        sed eiusnod tenpor incidunt ut labore et dolore nagna aliqua. 
+                        Ut enin ad ninin venian, quis nostrun exercitationen.
+                    </p>
+                    <div class="container text-center " id="cuado_interactivo">
+                        <div id="more"></div>
+                    </div>
                 </div>
             </div>
+            
+
             <div class="row" id="container_doble">   
                 <div class="col-5">
                     <h3>MANIPULACIÓN EMOCIONAL</h3>
@@ -69,6 +95,7 @@
                     <p>El usuario es manipulado a través de frases a realizar cosas que no tenía pensado desde un comienzo.</p>
                 </div>
             </div>
+
             <div class="row" id="container_doble">   
                 <div class="col-5">
                     <h3>OSCURECIMIENTO DE PRIVACIDAD</h3>
@@ -77,6 +104,7 @@
                     <p>El usuario no tiene claro de qué forma será usada su información privada.</p>
                 </div>
             </div>
+
             <div class="row" id="container_doble">   
                 <div class="col-5">
                     <h3>SUSCRIPCIONES INVOLUNTARIAS</h3>
@@ -85,6 +113,7 @@
                     <p>El usuario es manipulado a través de frases a realizar cosas que no tenía pensado desde un comienzo.</p>
                 </div>
             </div>  
+
             <div class="row" id="container_doble">   
                 <div class="col-5">
                     <h3>URGENCIAS FALSAS</h3>
@@ -92,7 +121,8 @@
                 <div class="col-7">
                     <p>El usuario es manipulado a través de frases a realizar cosas que no tenía pensado desde un comienzo.</p>                    
                 </div>
-            </div>  
+            </div>
+
             <div class="row" id="container_doble">   
                 <div class="col-5">
                     <h3>ANUNCIOS DISFRAZADOS</h3>
@@ -113,9 +143,13 @@
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
         <!-- js -->
-        <script src="/PAGINA_2/app.js" async defer></script>
+        <script src="/PAGINA_2/js/patronesoscuros.js" async defer></script>
         <!-- nav.js -->
         <script src="/PAGINA_2/nav/nav.js"></script>
+        <!-- leer mas -->
+        <script src="/PAGINA_2/more/more.js"></script>
+        <!-- loader distraccion -->
+        <script src="/PAGINA_2/loader/loader.js"></script>
         <!-- footer.js -->
         <script src="/PAGINA_2/footer/footer.js"></script>
 </body>
