--- a/PAGINA_2/patronesoscuros.html
+++ b/PAGINA_2/patronesoscuros.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="contenido oculto" id="contenido-manipulacion">
                     <!-- Contenido oculto aquí -->
-                    <h2>Manipulación</h2>
+                    <h2>MANIPULACIÓN</h2>
                     <p>Se presenta al usuario una opción para realizar una acción,
                          pero el diseño de la interfaz hace que sea fácil seleccionar una opción no deseada.
                           Por ejemplo, los botones de Aceptar y Cancelar pueden estar diseñados de manera
