--- a/PAGINA_2/patronesoscuros.html
+++ b/PAGINA_2/patronesoscuros.html
@@ -143,14 +143,14 @@
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
         <!-- js -->
-        <script src="/PAGINA_2/js/patronesoscuros.js" async defer></script>
+        <script src="js/patronesoscuros.js" async defer></script>
         <!-- nav.js -->
-        <script src="/PAGINA_2/nav/nav.js"></script>
+        <script src="nav/nav.js"></script>
         <!-- leer mas -->
-        <script src="/PAGINA_2/more/more.js"></script>
+        <script src="more/more.js"></script>
         <!-- loader distraccion -->
-        <script src="/PAGINA_2/loader/loader.js"></script>
+        <script src="loader/loader.js"></script>
         <!-- footer.js -->
-        <script src="/PAGINA_2/footer/footer.js"></script>
+        <script src="footer/footer.js"></script>
 </body>
 </html>
