--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!-- styles.css -->
     <link rel="stylesheet" href="styles.css">
     <!-- nav.css -->
-    <link rel="stylesheet" href="/PAGINA_2/nav/nav.css">
+    <link rel="stylesheet" href="/nav/nav.css">
     <!-- cookie -->
-    <link rel="stylesheet" href="/PAGINA_2/cookie/cookie.css">
+    <link rel="stylesheet" href="/cookie/cookie.css">
     <!-- footer.css -->
-    <link rel="stylesheet" href="/PAGINA_2/footer/footer.css">
+    <link rel="stylesheet" href="/footer/footer.css">
 </head>
 <body>
     <div class="container" id="imagendefondo">
@@ -103,7 +103,7 @@
                              Dentro de los contextos a considerar, el diseño se desenvuelve en diferentes áreas o “tipos”.</p>
                     </div>
                     <div class="col-6">
-                        <img src="/PAGINA_2/img/BOTONTIPOSDEDISEÑO2.png" alt="Descripción de la imagen" id="BOTONventana">
+                        <img src="/img/BOTONTIPOSDEDISEÑO2.png" alt="Descripción de la imagen" id="BOTONventana">
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                              centrándose más que nada en la sensación de la experiencia.</p>
                     </div>
                     <div class="col-6">
-                        <img src="/PAGINA_2/img/BOTONDISEÑOUXUI2.png" alt="Descripción de la imagen" id="BOTONventana">  
+                        <img src="/img/BOTONDISEÑOUXUI2.png" alt="Descripción de la imagen" id="BOTONventana">  
                     </div>
                 </div>
             </div>
@@ -131,7 +131,7 @@
                             corporis suscipit laboriosan.</p>
                     </div>
                     <div class="col-6">
-                        <img src="/PAGINA_2/img/BOTONCAMPOLABORAL2.png" alt="Descripción de la imagen" id="BOTONventana">  
+                        <img src="/img/BOTONCAMPOLABORAL2.png" alt="Descripción de la imagen" id="BOTONventana">  
                     </div>
                 </div>
             </div>
@@ -144,7 +144,7 @@
                             corporis suscipit laboriosan.</p>
                     </div>
                     <div class="col-6">
-                        <img src="/PAGINA_2/img/BOTONINVESTIGACIÓNDEUSUARIO2.png" alt="Descripción de la imagen" id="BOTONventana">  
+                        <img src="/img/BOTONINVESTIGACIÓNDEUSUARIO2.png" alt="Descripción de la imagen" id="BOTONventana">  
                     </div>
                 </div>
             </div>
@@ -153,10 +153,10 @@
     <!-- franja 2 -->
     <div class="container-fluid" id="franja_2">
         <div class="container" id="franja_2_contenido">
-            <h2><a href="/PAGINA_2/patronesoscuros.html" class="link-sin-estilo">PATRONES</a></h2>
+            <h2><a href="/patronesoscuros.html" class="link-sin-estilo">PATRONES</a></h2>
         </div>
         <div class="container" id="franja_2_contenido">
-            <h2><a href="/PAGINA_2/patronesoscuros.html" class="link-sin-estilo">PATRONES OSCUROS</a></h2>
+            <h2><a href="/patronesoscuros.html" class="link-sin-estilo">PATRONES OSCUROS</a></h2>
         </div>
     </div>
     <!-- Nuestro objetivo -->
@@ -185,7 +185,7 @@
         
     </div>
     <div class="container justify-content-center" id="containerfondo">
-    <img src="/PAGINA_2/img/fondo2.png" alt="Descripción de la imagen" id="fondofinal">
+    <img src="/img/fondo2.png" alt="Descripción de la imagen" id="fondofinal">
     </div>
 
 
@@ -197,8 +197,8 @@
     <!-- js -->
     <script src="scripts.js" async defer></script>
     <!-- nav.js -->
-    <script src="/PAGINA_2/nav/nav.js"></script>
+    <script src="/nav/nav.js"></script>
     <!-- footer.js -->
-    <script src="/PAGINA_2/footer/footer.js"></script>
+    <script src="/footer/footer.js"></script>
 </body>
 </html>
