--- a/nav/nav.html
+++ b/nav/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar" id="nav">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/PAGINA_2/index.html" id="nav_home">NODEUX</a>
+        <a class="navbar-brand" href="/index.html" id="nav_home">NODEUX</a>
         <div class="d-flex"> 
             <!-- USUARIO -->
             <div class="nav-item dropdown">
@@ -8,7 +8,7 @@
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">Investigación de usuario</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="/PAGINA_2/patronesoscuros.html">Patrones Oscuros / experiencias</a></li>
+                    <li><a class="dropdown-item" href="/patronesoscuros.html">Patrones Oscuros / experiencias</a></li>
                 </ul>
             </div>
             <!-- Acerca de -->
