--- a/patrones.html
+++ b/patrones.html
@@ -13,13 +13,13 @@
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- styles.css -->
-    <link rel="stylesheet" href="/PAGINA_2/css/patrones.css">
+    <link rel="stylesheet" href="/css/patrones.css">
     <!-- nav.css -->
-    <link rel="stylesheet" href="/PAGINA_2/nav/nav.css">
+    <link rel="stylesheet" href="/nav/nav.css">
     <!-- cookie -->
-    <link rel="stylesheet" href="/PAGINA_2/cookie/cookie.css">
+    <link rel="stylesheet" href="/cookie/cookie.css">
     <!-- footer.css -->
-    <link rel="stylesheet" href="/PAGINA_2/footer/footer.css">
+    <link rel="stylesheet" href="/footer/footer.css">
 </head>
 <body>
     <!-- nav barra -->
@@ -46,8 +46,8 @@
         <!-- js -->
         <script src="#" async defer></script>
         <!-- nav.js -->
-        <script src="/PAGINA_2/nav/nav.js"></script>
+        <script src="/nav/nav.js"></script>
         <!-- footer.js -->
-        <script src="/PAGINA_2/footer/footer.js"></script>
+        <script src="/footer/footer.js"></script>
 </body>
 </html>
