--- a/patronesoscuros.html
+++ b/patronesoscuros.html
@@ -13,15 +13,15 @@
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- styles.css -->
-    <link rel="stylesheet" href="/PAGINA_2/css/patronesoscuros.css">
+    <link rel="stylesheet" href="/css/patronesoscuros.css">
     <!-- nav.css -->
-    <link rel="stylesheet" href="/PAGINA_2/nav/nav.css">
+    <link rel="stylesheet" href="/nav/nav.css">
     <!-- boton mas.css -->
-    <link rel="stylesheet" href="/PAGINA_2/more/more.css">
+    <link rel="stylesheet" href="/more/more.css">
     <!-- loader distraccion -->
-    <link rel="stylesheet" href="/PAGINA_2/loader/loader.css">
+    <link rel="stylesheet" href="/loader/loader.css">
     <!-- footer.css -->
-    <link rel="stylesheet" href="/PAGINA_2/footer/footer.css">
+    <link rel="stylesheet" href="/footer/footer.css">
 </head>
 <body>
     <!-- nav barra -->
