--- a/patronesoscuros.html
+++ b/patronesoscuros.html
@@ -16,8 +16,6 @@
     <link rel="stylesheet" href="/css/patronesoscuros.css">
     <!-- nav.css -->
     <link rel="stylesheet" href="/nav/nav.css">
-    <!-- boton mas.css -->
-    <link rel="stylesheet" href="/more/more.css">
     <!-- loader distraccion -->
     <link rel="stylesheet" href="/loader/loader.css">
     <!-- footer.css -->
@@ -26,9 +24,7 @@
 <body>
     <!-- nav barra -->
     <div id="nav"></div>
-
-    
-
+    <main class="main">
     <!-- cuadro principal -->
     <div class="rectangulopestaña"></div>
     <div class="container justify-content-between" id="container_principal"> 
@@ -54,103 +50,70 @@
                 </p>
             </div>
         </div>
-        <!-- CATEGORÍAS -->
-        <div class="container" id="categorias">
-            <h2>CATEGORÍAS</h2>
-            <!-- FILAS -->
-            <div class="row container_doble">
-                <div class="col-5">
-                    <h3 class="titulo-manipulacion">MANIPULACIÓN <span class="triangulo"></span></h3>
-                </div>
-                <div class="col-7">
-                    <p>Se dirige al usuario para que realice acciones no deseadas, 
-                        pero que son beneficiosas para la interfaz o servicio.</p>
-                </div>
-                <div class="contenido oculto" id="contenido-manipulacion">
-                    <!-- Contenido oculto aquí -->
-                    <h2>MANIPULACIÓN</h2>
-                    <p>Se presenta al usuario una opción para realizar una acción,
-                         pero el diseño de la interfaz hace que sea fácil seleccionar una opción no deseada.
-                          Por ejemplo, los botones de Aceptar y Cancelar pueden estar diseñados de manera
-                           que el botón Aceptar sea más llamativo o esté ubicado en una posición que
-                            favorezca su selección accidental.
-                    </p>
-                    <h3>Casos de estudio</h3>
-                    <p>Loren ipsun dolor sit anet, consectetur adipisci elit, 
-                        sed eiusnod tenpor incidunt ut labore et dolore nagna aliqua. 
-                        Ut enin ad ninin venian, quis nostrun exercitationen.
-                    </p>
-                    <div class="container text-center " id="cuado_interactivo">
-                        <div id="more"></div>
+        <!-- CATEGORÍAS -->        <h2>CATEGORÍAS</h2>
+        <!-- FILAS -->
+        <div class="row container_doble">
+            <div class="col-5">
+                <h3 class="titulo-manipulacion">MANIPULACIÓN <span class="triangulo"></span></h3>
+            </div>
+            <div class="col-7">
+                <p>Se dirige al usuario para que realice acciones no deseadas, 
+                    pero que son beneficiosas para la interfaz o servicio.</p>
+            </div>
+        </div>
+        <div class="contenido oculto" id="contenido-manipulacion">
+            <!-- Contenido oculto aquí -->
+            <h2>MANIPULACIÓN</h2>
+            <p>Se presenta al usuario una opción para realizar una acción,
+                 pero el diseño de la interfaz hace que sea fácil seleccionar una opción no deseada.
+                  Por ejemplo, los botones de Aceptar y Cancelar pueden estar diseñados de manera
+                   que el botón Aceptar sea más llamativo o esté ubicado en una posición que
+                    favorezca su selección accidental.
+            </p>
+            <h3>Casos de estudio</h3>
+            <p>Loren ipsun dolor sit anet, consectetur adipisci elit, 
+                sed eiusnod tenpor incidunt ut labore et dolore nagna aliqua. 
+                Ut enin ad ninin venian, quis nostrun exercitationen.
+            </p>
+            <div class="container text-center " id="cuado_interactivo">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                    Launch static backdrop modal
+                </button>
+                <!-- Modal -->
+                <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                        ...
+                        </div>
+                        <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Understood</button>
+                        </div>
+                    </div>
                     </div>
                 </div>
             </div>
-            
-
-            <div class="row" id="container_doble">   
-                <div class="col-5">
-                    <h3>MANIPULACIÓN EMOCIONAL</h3>
-                </div>
-                <div class="col-7">
-                    <p>El usuario es manipulado a través de frases a realizar cosas que no tenía pensado desde un comienzo.</p>
-                </div>
-            </div>
-
-            <div class="row" id="container_doble">   
-                <div class="col-5">
-                    <h3>OSCURECIMIENTO DE PRIVACIDAD</h3>
-                </div>
-                <div class="col-7">
-                    <p>El usuario no tiene claro de qué forma será usada su información privada.</p>
-                </div>
-            </div>
-
-            <div class="row" id="container_doble">   
-                <div class="col-5">
-                    <h3>SUSCRIPCIONES INVOLUNTARIAS</h3>
-                </div>
-                <div class="col-7">
-                    <p>El usuario es manipulado a través de frases a realizar cosas que no tenía pensado desde un comienzo.</p>
-                </div>
-            </div>  
-
-            <div class="row" id="container_doble">   
-                <div class="col-5">
-                    <h3>URGENCIAS FALSAS</h3>
-                </div>
-                <div class="col-7">
-                    <p>El usuario es manipulado a través de frases a realizar cosas que no tenía pensado desde un comienzo.</p>                    
-                </div>
-            </div>
-
-            <div class="row" id="container_doble">   
-                <div class="col-5">
-                    <h3>ANUNCIOS DISFRAZADOS</h3>
-                </div>
-                <div class="col-7">
-                    <p>El usuario es manipulado a través de frases a realizar cosas que no tenía pensado desde un comienzo.</p>
-                </div>
-            </div>  
-        </div>    
-    </div>
-
-    <div class="rectangulocierre"></div>
-
-
+        </div>
+    </main>
     <!-- footer  -->
     <div id="footer"></div>
-        <!-- bootstrap -->
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-        <!-- js -->
-        <script src="js/patronesoscuros.js" async defer></script>
-        <!-- nav.js -->
-        <script src="nav/nav.js"></script>
-        <!-- leer mas -->
-        <script src="more/more.js"></script>
-        <!-- loader distraccion -->
-        <script src="loader/loader.js"></script>
-        <!-- footer.js -->
-        <script src="footer/footer.js"></script>
+
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <!-- js -->
+    <script src="js/patronesoscuros.js" async defer></script>
+    <!-- nav.js -->
+    <script src="nav/nav.js"></script>
+    <!-- loader distraccion -->
+    <script src="loader/loader.js"></script>
+    <!-- footer.js -->
+    <script src="footer/footer.js"></script>
 </body>
 </html>
