--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <!-- franja 2 -->
     <div class="container-fluid" id="franja_2">
         <div class="container" id="franja_2_contenido">
-            <h2><a href="/patronesoscuros.html" class="link-sin-estilo">PATRONES</a></h2>
+            <h2><a href="/patrones.html" class="link-sin-estilo">PATRONES</a></h2>
         </div>
         <div class="container" id="franja_2_contenido">
             <h2><a href="/patronesoscuros.html" class="link-sin-estilo">PATRONES OSCUROS</a></h2>
@@ -198,7 +198,5 @@
     <script src="scripts.js" async defer></script>
     <!-- nav.js -->
     <script src="/nav/nav.js"></script>
-    <!-- footer.js -->
-    <script src="/footer/footer.js"></script>
 </body>
 </html>
