--- a/index.html
+++ b/index.html
@@ -97,10 +97,9 @@
                 <h2>TIPOS DE DISEÑO</h2>
                 <div class="row">
                     <div class="col-6">
-                        <p>Los diferentes diseños expuestos y utilizados en la sociedad, 
-                            se desarrollan de acuerdo a problemáticas y observaciones que van surgiendo y que a través de procesos y cualidades distintivas, 
-                            es que estos son funcionales y capaces de desenvolverse en ambientes donde estos son adaptables de acuerdo al contexto por el cual fue solicitado.
-                             Dentro de los contextos a considerar, el diseño se desenvuelve en diferentes áreas o “tipos”.</p>
+                        <p>Para comprender el diseño, debemos introducirnos en sus diferentes áreas de estudio
+                           que se encargan de dar forma a objetos ya sean físicos o digitales, entregando un aporte
+                           significativo a la sociedad.</p>
                     </div>
                     <div class="col-6">
                         <img src="/img/BOTONTIPOSDEDISEÑO2.png" alt="Descripción de la imagen" id="BOTONventana">
@@ -111,11 +110,8 @@
                 <h2>DISEÑO UX/UI</h2>
                 <div class="row">
                     <div class="col-6">
-                        <p>Diseño de Experiencia de Usuario (UX) toma por definición como todo aquel diseño (digital o físico)
-                             encargado de poder comprender y mantener una buena relación entre el usuario y el servicio/Interfaz.
-                             Por medio de este se puede observar cómo se desenvuelve el usuario con las diferentes propuestas,
-                             siendo parte de un desarrollo el cual da paso a la mejora en cuanto a calidad de la interacción,
-                             centrándose más que nada en la sensación de la experiencia.</p>
+                        <p>Introducirnos en el diseño UX/UI es comprender 
+                           el pensamiento previo a propuestas de diseño digitales que permiten la interacción entre el usuario y servicio.</p>
                     </div>
                     <div class="col-6">
                         <img src="/img/BOTONDISEÑOUXUI2.png" alt="Descripción de la imagen" id="BOTONventana">  
@@ -126,9 +122,8 @@
                 <h2>CAMPO LABORAL</h2>
                 <div class="row">
                     <div class="col-6">
-                        <p>Loren ipsun dolor sit anet, consectetur adipisci elit, sed eiusnod tenpor incidunt ut 
-                            labore et dolore nagna aliqua. Ut enin ad ninin venian, quis nostrun exercitationen ullan 
-                            corporis suscipit laboriosan.</p>
+                        <p>Con relación a los tipos de diseño, nos enfocamos en el área del diseño de interacción donde,
+                           damos a conocer diferentes oportunidades laborales que pueden ser de tú interés.</p>
                     </div>
                     <div class="col-6">
                         <img src="/img/BOTONCAMPOLABORAL2.png" alt="Descripción de la imagen" id="BOTONventana">  
@@ -139,9 +134,8 @@
                 <h2>INVESTIGACION DE USUARIO</h2>
                 <div class="row">
                     <div class="col-6">
-                        <p>Loren ipsun dolor sit anet, consectetur adipisci elit, sed eiusnod tenpor incidunt ut 
-                            labore et dolore nagna aliqua. Ut enin ad ninin venian, quis nostrun exercitationen ullan 
-                            corporis suscipit laboriosan.</p>
+                        <p>Dentro de lo que conocemos como Diseño UX, se desenvuelven aptitudes que interrogan
+                           al usuario con la finalidad de obtener respuestas que se desarrollan dentro de una próxima propuesta de solución.</p>
                     </div>
                     <div class="col-6">
                         <img src="/img/BOTONINVESTIGACIÓNDEUSUARIO2.png" alt="Descripción de la imagen" id="BOTONventana">  
