--- a/patrones.html
+++ b/patrones.html
@@ -28,7 +28,7 @@
         <div class="container justify-content-between" id="container_principal"> 
             <div class="container-fluid" id="container_descripcion">
                 <h2>PATRONES</h2>
-                <p class="justify-content-between">Concepto aplicado por el arquitecto Cristopher Alexander para ser introducidos 
+                <p>Concepto aplicado por el arquitecto Cristopher Alexander para ser introducidos 
                     principalmente en el área de desarrollo de softwares, sin embargo, en la actualidad 
                     también abarca a otras disciplinas.
                     Los patrones de diseño son elementos que complementan el estilo y estructura 
@@ -40,7 +40,19 @@
                     interfaz-usuario.
                 </p>
             </div>
-
+            <div class="container-fluid" id="reactangulo">
+                <h2>EJEMPLOS</h2>
+                <div class="row justify-content-center">
+                    <div class="cuadrado"></div>
+                </div>
+            </div>
+            
+            <div class="container-fluid" id="ventajas">
+                <h2>VENTAJAS DE UTILIZARLOS</h2>
+                <div class="row justify-content-center">
+                    <div class="cuadrado"></div>
+                </div>
+            </div>
         </div>
     </main>
     <!-- footer  -->
